fixing alignment

--- a/src/App.css
+++ b/src/App.css
@@ -721,8 +721,8 @@ form textarea {
   transform: scale(1.1);
   cursor: pointer;
 }
-.download-button{
-  background-color:#39144e;
+.download-button {
+  background-color: #39144e;
   padding: 1% 3%;
   border: 1px solid white;
 }
@@ -963,10 +963,10 @@ form textarea {
   .main-content h3 {
     font-size: 15px;
   }
-  .nav ul li a{
+  .nav ul li a {
     font-size: 10px;
   }
-  .abt-cnt{
+  .abt-cnt {
     margin: 18% 0 10% 0;
   }
 }
@@ -977,8 +977,8 @@ form textarea {
   #click:checked ~ .menu-btn i:before {
     content: '\f00d';
   }
-  .abt-cnt{
-    margin:0;
+  .abt-cnt {
+    margin: 0;
   }
   nav ul {
     position: fixed;
@@ -1048,7 +1048,7 @@ form textarea {
     font-size: 31px;
   }
   .page2 {
-    height: 100vh;
+    height: auto;
   }
   .services {
     margin-top: 12%;
@@ -1098,7 +1098,6 @@ form textarea {
     font-size: 15px;
   }
 
-  .page1,
   .page3,
   .page4,
   .page5 {
@@ -1150,6 +1149,9 @@ form textarea {
   }
   .contact-text {
     text-align: center;
+  }
+  .page1{
+    height:100vh;
   }
 }
 
@@ -1203,7 +1205,12 @@ form textarea {
   .main-content h2 {
     font-size: 22px;
   }
-
+  .lottie {
+    display: block;
+  }
+  .lottie {
+    margin-top: 75px;
+  }
   .main-content h1 {
     font-size: 36px;
   }
@@ -1211,14 +1218,19 @@ form textarea {
     font-size: 12px;
   }
   .about-txt h2 {
-    font-size: 38px;
+    font-size: 42px;
   }
   .main-content {
-    padding-top: 21%;
+    padding-top: 28%;
+  }
+  .lottie {
+    display: flex;
+    align-items: baseline;
+    max-width: 69%;
   }
 
   .about-txt p {
-    font-size: 12px;
+    font-size: 16px;
   }
   .skillcontent .bx {
     font-size: 42px;
